tests/baselines/reference/indexSignatureTypeCheck2.errors.txt
==== tests/cases/compiler/indexSignatureTypeCheck2.ts (5 errors) ====
    class IPropertySet {
        [index: string]: any
    }
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    ps[index] = 12;
    
    interface indexErrors {
        [p2?: string];
         ~~~~~~~~~~~
!!! indexSignatureTypeCheck2.ts(10,6): error TS1019: Index signature parameter cannot have a question mark.
        [...p3: any[]];
         ~~~~~~~~~~~~
!!! indexSignatureTypeCheck2.ts(11,6): error TS1017: Index signatures cannot have rest parameters.
        [p4: string, p5?: string];
        ~
!!! indexSignatureTypeCheck2.ts(12,5): error TS1095: Index signature must have exactly one parameter.
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! indexSignatureTypeCheck2.ts(12,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	indexSignatureTypeCheck2.ts(10,5)
        [p6: string, ...p7: any[]];
        ~
!!! indexSignatureTypeCheck2.ts(13,5): error TS1095: Index signature must have exactly one parameter.
    }